--- a/package.json
+++ b/package.json
@@ -3,14 +3,35 @@
   "version": "1.0.0",
   "description": "There is a boilderplate for Webpack React and MongoDB",
   "main": "index.js",
+  "scripts": {
+    "express_serve": "node app.js",
+    "server": "webpack-dev-server --hot --env=dev",
+    "build:dev": "webpack --env=dev --progress --profile --colors --watch",
+    "build:dist": "webpack --env=prod --progress --profile --colors"
+  },
   "author": "Anh(Robert)T. NGUYEN",
   "license": "MIT",
   "dependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "chunk-manifest-webpack-plugin": "^1.1.0",
+    "css-loader": "^0.28.4",
+    "express": "^4.15.3",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
+    "jquery": "^3.2.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "source-map-loader": "^0.2.1",
-    "webpack": "^3.3.0"
+    "style-loader": "^0.18.2",
+    "webpack": "^3.3.0",
+    "webpack-chunk-hash": "^0.4.0",
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-dev-server": "^2.5.1",
+    "webpack-manifest-plugin": "^1.2.1",
+    "webpack-merge": "^4.1.0"
   }
 }
